tests/macros/missing/plugin.rs
fn main() {
    discourse::questions![Plugin { name: "plugin" }];
}
